[workspace]
members = ["ators", "atorsl"]

[workspace.package]
version = "0.1.0"
description = "convert numeric addresses to symbols of binary images"
authors = ["Matias Pequeno <matias.pequeno@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/matux/ators"
documentation = "https://docs.rs/ators"
repository = "https://github.com/matux/ators"
categories = ["development-tools::debugging", "utilities"]
keywords = ["atos", "debug", "DWARF", "symbolication"]
edition = "2021"
exclude = ["/.github"]
publish = false

[workspace.dependencies]
atorsl = { path = "atorsl" }

[profile.release]
lto = true
opt-level = 3
