[workspace]
members = ["ators", "atorsl", "demangol"]

[workspace.package]
authors = ["Matias Pequeno <matias.pequeno@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/matux/ators"
documentation = "https://docs.rs/ators"
repository = "https://github.com/matux/ators"
categories = ["development-tools::debugging", "utilities"]
keywords = ["atos", "debug", "DWARF", "symbolication"]
edition = "2021"
exclude = ["/.github"]
publish = true

[workspace.dependencies]
atorsl = { path = "atorsl" }
demangol = { path = "demangol" }

[profile.release]
lto = true
opt-level = 3
