[package]
name = "ators"
version = "0.3.1"
description = "convert numeric addresses to symbols of binary images"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
atorsl.workspace = true
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["cargo", "string"] }
itertools = "0.10.5"

# object
memmap2 = "0.5.10"
object = "0.31.0"
gimli = "0.27.2"
fallible-iterator = "0.3.0"
uuid = "1.3.1"

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
anyhow = "1.0.70"
memmap2 = "0.5.10"
object = "0.31.0"
