[package]
name = "atorsl"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ators-proc-macro.workspace = true
thiserror = "1.0.40"
fallible-iterator = { version = "0.2.0", features = ["std", "alloc"] }
gimli = "0.27.2"
memmap2 = "0.5.10"
object = "0.30.3"
