[package]
name = "atorsl"
version = "0.1.0"
description = "convert numeric addresses to symbols of binary images"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
fallible-iterator = "0.2.0"
thiserror = "1.0.40"
memmap2 = "0.5.10"
object = "0.30.3"
gimli = "0.27.2"

[build-dependencies]
cc = "1.0.79"
