[package]
name = "atorsl"
version = "0.3.1"
description = "convert numeric addresses to symbols of binary images"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
fallible-iterator = "0.2.0"
itertools = "0.11.0"
thiserror = "1.0.40"
memmap2 = "0.5.10"
object = "0.31.0"
gimli = "0.27.2"

cpp_demangle = "0.4.0"
msvc-demangler = "0.9.0"
rustc-demangle = "0.1.21"
derive_builder = "0.12.0"

[build-dependencies]
cc = "1.0.79"
