[package]
name = "atorspm"
version.workspace = true
description = "Procedural Macros used in ators"
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[lib]
proc-macro = true

[[test]]
name = "derive_tests"
path = "tests/derive.rs"

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["derive", "extra-traits"] }

[dev-dependencies]
trybuild = { version = "1.0.77", features = ["diff"] }
